--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -443,6 +443,26 @@
 		"message": "загрузить на Google Drive",
 		"description": "Options page label: 'upload to Google Drive'"
 	},
+	"optionSaveToGitHub": {
+		"message": "загрузить на GitHub",
+		"description": "Options page label: 'upload to GitHub'"
+	},
+	"optionGitHubToken": {
+		"message": "токен доступа",
+		"description": "Options page label: 'access token'"
+	},
+	"optionGitHubUser": {
+		"message": "имя пользователя",
+		"description": "Options page label: 'user name'"
+	},
+	"optionGitHubRepository": {
+		"message": "название репозитория",
+		"description": "Options page label: 'repository name'"
+	},
+	"optionGitHubBranch": {
+		"message": "название ветки",
+		"description": "Options page label: 'branch name'"
+	},
 	"optionSaveCreatedBookmarks": {
 		"message": "сохранить страницу недавно созданной закладки",
 		"description": "Options page label: 'save the page of a newly created bookmark'"
