--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -444,23 +444,23 @@
         "description": "Options page label: 'upload to Google Drive'"
     },
 	"optionSaveToGitHub": {
-		"message": "upload to GitHub",
+		"message": "保存到 GitHub",
 		"description": "Options page label: 'upload to GitHub'"
 	},
 	"optionGitHubToken": {
-		"message": "access token",
+		"message": "訪問令牌",
 		"description": "Options page label: 'access token'"
 	},
 	"optionGitHubUser": {
-		"message": "user name",
+		"message": "用戶名",
 		"description": "Options page label: 'user name'"
 	},
 	"optionGitHubRepository": {
-		"message": "repository name",
+		"message": "倉庫名稱",
 		"description": "Options page label: 'repository name'"
 	},
 	"optionGitHubBranch": {
-		"message": "branch name",
+		"message": "分支名稱",
 		"description": "Options page label: 'branch name'"
 	},
     "optionSaveCreatedBookmarks": {
