--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -151,6 +151,10 @@
         "message": "template of the infobar content",
         "description": "Options page label: 'template of the infobar content'"
     },
+	"optionBlockMixedContent": {
+		"message": "block mixed content",
+		"description": "Options page label: 'block mixed content'"
+	},
     "optionIncludeInfobar": {
         "message": "include the infobar in the saved page",
         "description": "Options page label: 'include the infobar in the saved page'"
