--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -152,7 +152,7 @@
 		"description": "Options page label: 'template of the infobar content'"
 	},
 	"optionBlockMixedContent": {
-		"message": "block mixed content",
+		"message": "блокировать смешанное содержимое",
 		"description": "Options page label: 'block mixed content'"
 	},
 	"optionIncludeInfobar": {
