--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -152,7 +152,7 @@
         "description": "Options page label: 'template of the infobar content'"
     },
 	"optionBlockMixedContent": {
-		"message": "block mixed content",
+		"message": "拦截混合內容",
 		"description": "Options page label: 'block mixed content'"
 	},
     "optionIncludeInfobar": {
