--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -155,6 +155,10 @@
 		"message": "block mixed content",
 		"description": "Options page label: 'block mixed content'"
 	},
+	"optionSaveOriginalURLs": {
+		"message": "save original URLs of embedded resources",
+		"description": "Options page label: 'save original URLs of embedded resources'"
+	},
     "optionIncludeInfobar": {
         "message": "include the infobar in the saved page",
         "description": "Options page label: 'include the infobar in the saved page'"
