--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -156,7 +156,7 @@
 		"description": "Options page label: 'block mixed content'"
 	},
 	"optionSaveOriginalURLs": {
-		"message": "save original URLs of embedded resources",
+		"message": "сохранять оригинальные URL встроенных ресурсов",
 		"description": "Options page label: 'save original URLs of embedded resources'"
 	},
 	"optionIncludeInfobar": {
